Fix: Menu, Panel's arrow icon align to right #181

--- a/userChrome.css
+++ b/userChrome.css
@@ -665,13 +665,13 @@
   :root[uidensity=touch] {
     --menu-padding: 0.5em;
   }
-  menupopup > menuitem, menupopup > menu {
+  menupopup > menuitem,
+  menupopup > menu {
     /* Original: 0.5em */
     padding-block: var(--menu-padding) !important;
   }
   menupopup > menu {
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    padding-inline-start: 0.5em;
   }
 
   @supports not -moz-bool-pref("layout.css.osx-font-smoothing.enabled") {
@@ -687,6 +687,15 @@
     :root:not([uidensity=touch]) .menu-right {
       margin-right: 6px !important;     /* Original: 12px */
     }
+  }
+
+  /* Arrow Icon Align to Right */
+  .subviewbutton.subviewbutton-nav,
+  .bookmark-item.subviewbutton {
+    padding-inline-end: 0 !important;
+  }
+  .bookmark-item.subviewbutton {
+    margin-inline-end: 0 !important;
   }
 
   /*= Poup Panel - Reduce padding ============================================*/
